--- a/24.10.16.md
+++ b/24.10.16.md
@@ -8,9 +8,18 @@ Date : 24.10.26
 > AI Team at WantedLab
 
 ### Lecture 1.0
-+ 포트폴리오에는 결과물 보단 비율
++ 포트폴리오에는 결과물 보단 비율, 과정을 기록
 + 새로운 도구를 사용할수 있는 역량
 + 지속적인 활동성을 증명
 + **변화에 대응 할 수 있는 사람인걸 증명**
 
 ### Lecture 2.0
++ 주위의 사람이 나를 위해 일해하고 싶은가
++ 회사는 사람을 뽑을때 ```성장가능성```을 본다
++ 앞으로 개발자는 AI와 함께 개발해야 한다
++ 필요에 따라 새로운 기술을 빨리 습득하는 것도 중요하다
++ 협업을 통해 인성을 트레이닝
++ 지식보단 ```태도```가 중요함
+
+### Lecture 3.0
++ 데이터 가공에 관한 직군
