--- a/24.10.16.md
+++ b/24.10.16.md
@@ -22,4 +22,9 @@ Date : 24.10.26
 + 지식보단 ```태도```가 중요함
 
 ### Lecture 3.0
-+ 데이터 가공에 관한 직군
++ 원천 데이터 가공에 관한 직군 ```데이터라벨링``` <- 경험 추천
++ 데이터 분석가는 안뽑는 직군임
+
+![생성형 AI 시장 생태계 및 비즈니스](https://modulabs.co.kr/wp-content/uploads/2024/06/ecosystem-980x408.png)
+
++ [crewai](https://www.crewai.com/) - 에이전트 플랫폼
