doc: directory fixed

--- a/24.10.16-1.md
+++ b/24.10.16-1.md
@@ -27,4 +27,9 @@ Date : 24.10.26
 
 ![생성형 AI 시장 생태계 및 비즈니스](https://modulabs.co.kr/wp-content/uploads/2024/06/ecosystem-980x408.png)
 
-+ [crewai](https://www.crewai.com/) - 에이전트 플랫폼
++ [Crewai](https://www.crewai.com/) - 에이전트 플랫폼
++ 에이전트를 만드는 것이 현시장에서 좋은 포트폴리오가 될 수 있다
++ 시장의 흐름을 보고 서비스를 만들어 보는것이 좋다
+
+### Lecture 4.0
++ 
