doc: Lecture 1.1 updated

--- a/24.10.16-2.md
+++ b/24.10.16-2.md
@@ -7,4 +7,47 @@ Date : 24.10.26
 > 정기수 <br />
 > AI Team at WantedLab
 
+---
+
 ### Lecture 1.0
++ [vFlat](https://www.vflat.com/)
++ 예시 ```vFlat``` 기존OCR을 가지고 책이라는 특수한 환경에서 문제 해결 방법을 탐구
++ 기술을 만들어도 유스케이스를 고려하지 않으면 서비스가 성립될 수 없음
++ 예시의 서비스 구조를 보면 촬영은 사용자가 글자 변환은 서버가 하게 만들어서 서비스의 부하를 조절
++ 기술만 바라보는게 아니라 문제에 맞는 모델을 이용해서 좋은 서비스를 만드는게 중요
++ ```문제정의```가 핵심이다
+
+---
+
+### Lecture 1.1
++ 두개의 이미지를 입력받아 두 이미지가 같은지 판단하는 함수(프로그램)을 만들어 보세요
+    + **해결방안 탐구**
+    + 픽셀비교? - 틀릴 가능성이 있음
+    + 저장된 파일의 헤시값을 비교 - 제일 빠른, 정확한 방법
+
++ 한개의 이미지를 입력받아 고양이 인지 아닌지 판단하는 함수(프로그램)을 만들어 보세요
+    + **해결방안 탐구**
+    + input -> function -> output
+    + 고양이의 쉐이프(특징)를 따서 함수에 정의를 하고 고양이라는 라벨링을 통해 프로그램을 구성 - 최초 접근법
+    + 고양이의 모습이 다양하다면 어떻해야 할까?
+
++ 딥러닝 이전의 영상인식 문제 해결 방법
++ 사진들어가야함
+
++ 딥러닝의 발전 과정
+    + 커널(kernel)필터(filter) - 기존에 사람이 데이터를 기입하는 방식
+
+    + AlexNet - Winner of ILSVRC 2012 - 최초로 딥러닝으로 인식률 80% 이상 달성
+     ![AlexNet - Winner of ILSVRC 2012](https://miro.medium.com/v2/resize:fit:720/format:webp/1*PjLuynVWCbSC99VrZgW4wQ.jpeg)
+
+    + Convolutional Neural Networks (합성곱 신경망)
+    ![CNN16](https://cdn-ilcabpl.nitrocdn.com/XTpGTaZWYQSxctfMHQPVOQKOsBspWTQi/assets/images/optimized/rev-630f56e/learnopencv.com/wp-content/uploads/2023/01/Convolutional-Neural-Networks-1024x611.png)
+
++ ```task```의 개념
+    + 인공지능(AI)에서 "task"는 AI 시스템이 수행하도록 설계된 특정한 목표나 문제를 의미
+    + 많은 task를 경험하고 다룰수 있는 task의 수를 늘리는게 중요
+    + 구조 : 공급데이터(input) > 백본(Backbone) > 헤드(Head)
+
++ [paperswithcode](https://paperswithcode.com/)
+
+### Lecture 1.2
