--- a/24.10.16-2.md
+++ b/24.10.16-2.md
@@ -51,3 +51,60 @@ Date : 24.10.26
 + [paperswithcode](https://paperswithcode.com/)
 
 ### Lecture 1.2
++ 신경망의 동작 원리 이해
+
++ 간단한 예측자
+    + 입력 > 처리 > 출력
+    + 킬로미터 > 연산 > 마일 - 우리가 변환 공식을 모른다고 가정
+    + 우리가 아는 것은 킬로미터와 마일의 관계가 선형이라는 것 뿐
+    + 연산 부분을 아래와 같이 수식으로 표현 가능
+        ```markdown
+        1. 현실 세계에서 관측된 몇개의 값을 가지고 있다고 가정
+        2. 100킬로미터 > 마일 = 킬로미터 * 0.5 > 계산된 값 50 마일
+        3. 실제 값 62.137 마일 - 오차 12.137
+        4. 0.5 > 0.6 - 오차 2.137
+        5. 0.6 > 0.7 - 오차 -7.863
+        6. 0.6 > 0.61 - 오차 1.137
+        ...
+        ```
+    + 데이터를 가지고 파라미터 보정을 하면서 오차 값을 줄이는 과정이 신경망 학습의 메커니즘
+
++ 간단한 분류 문제
+    + 곤충의 분류
+    + 길이와 폭으로 분류(2가지 데이터)
+    + 데이터가 늘어나는 순간 눈으로 파악이 불가
+    + 미지의 곤충의 데이터가 들어오는순간 분할선으로 분류
+    + 분할선의 기울기의 오차를 줄여가는 가며 학습 
+    + 마지막데이터에 의존하여 기울기가 정해짐
+    + 결론적으로 학습이 안됨
+    + 학습률의 개념이 생김
+
++ **변수의 오차를 기반으로 데이터를 학습한다** - 학습의 메커니즘
+
++ 여러개의 분류기
+    + 불 논리 함수
+    + 수식하나로 문제를 해결할수 없음
+    + 모델의 개념이 생김
+
++ 생물학적 뉴런
+    + 뉴런은 전기 입력을 받아 또다른 전기신호를 발생 시킴
+    + 뉴런을 선형함수로 표현 가능한가?
+
++ 생물학적 뉴런을 인공적으로 모델링 하기 - FC
+    + ![생물학적 뉴런을 인공적으로 모델링 하기](https://image.samsungsds.com/global/ko/news/story/717_11.jpg?queryString=20200925042453)
+
++ 신경망 내의 신호 따라가기
+    + ![신경망 내의 신호 따라가기]()
+
++ 가중치의 진짜 업데이트
+    + 가중치를 한번에 계산해주는 수학공식이 없을까?
+    + 랜덤으로 추측해서 구해보는것은 어떨까?
+        + 무차별 대입 방법을 적용하면?
+        + 현실적으로 시간이 너무 오래 걸려서 불가능...
+
++ 경사하강법 - Gradient descent
+    + 경사하강법은 함수의 기울기(gradient)를 이용하여 함수의 최소값을 향해 점진적으로 이동하는 방법
+    + 매개변수를 계속해서 미분했을때 기울기가 최소화 되는 구간을 찾는 기법
+
++ 메커니즘은 동일하다 모델을 만드는것은 현시점에서 비용적으로 무리
++ 만들어져있는 모델을 가지고 서비스를 만드는 관점이 중요함
