--- a/24.10.16-2.md
+++ b/24.10.16-2.md
@@ -108,3 +108,17 @@ Date : 24.10.26
 
 + 메커니즘은 동일하다 모델을 만드는것은 현시점에서 비용적으로 무리
 + 만들어져있는 모델을 가지고 서비스를 만드는 관점이 중요함
+
++ 벡터화(Vectorization)
+
++ 딥러닝 모델을 이용한 서비스 개발의 핵심은?
+    + **Inference Engine**
+    + 다양한 제조사에서 추론기(Inference)를 만드는 이유?
+        + 하드웨어나 OS에서 딥러닝 모델이 구동불가하면 채택되기가 어렵다
+
++ 온디바이스 딥러닝이 필요한 경우
+    + 보완
+    + 낮은 지연속도
+    + 서버의 부담을 낮추기 위해서
+
+### **Task, Inference Engine** : 현업에서 일하기 위해 꼭 알고 가야할 개념
