--- a/lecture/24.10.16-1.md
+++ b/lecture/24.10.16-1.md
@@ -7,17 +7,13 @@ Date : 24.10.26
 > 정기수 <br />
 > AI Team at WantedLab
 
----
-
-### Lecture 1.0
+## Lecture 1.0
 + 포트폴리오에는 결과물 보단 비율, 과정을 기록
 + 새로운 도구를 사용할수 있는 역량
 + 지속적인 활동성을 증명
 + **변화에 대응 할 수 있는 사람인걸 증명**
 
----
-
-### Lecture 2.0
+## Lecture 2.0
 + 주위의 사람이 나를 위해 일해하고 싶은가
 + 회사는 사람을 뽑을때 ```성장가능성```을 본다
 + 앞으로 개발자는 AI와 함께 개발해야 한다
@@ -25,9 +21,7 @@ Date : 24.10.26
 + 협업을 통해 인성을 트레이닝
 + 지식보단 ```태도```가 중요함
 
----
-
-### Lecture 3.0
+## Lecture 3.0
 + 원천 데이터 가공에 관한 직군 ```데이터라벨링``` <- 경험 추천
 + 데이터 분석가는 안뽑는 직군임
 
@@ -36,5 +30,3 @@ Date : 24.10.26
 + [Crewai](https://www.crewai.com/) - 에이전트 플랫폼
 + 에이전트를 만드는 것이 현시장에서 좋은 포트폴리오가 될 수 있다
 + 시장의 흐름을 보고 서비스를 만들어 보는것이 좋다
-
----
