--- a/lecture/24.10.16-2.md
+++ b/lecture/24.10.16-2.md
@@ -7,9 +7,7 @@ Date : 24.10.26
 > 정기수 <br />
 > AI Team at WantedLab
 
----
-
-### Lecture 1.0
+## Lecture 1.0
 + [vFlat](https://www.vflat.com/)
 + 예시 ```vFlat``` 기존OCR을 가지고 책이라는 특수한 환경에서 문제 해결 방법을 탐구
 + 기술을 만들어도 유스케이스를 고려하지 않으면 서비스가 성립될 수 없음
@@ -17,9 +15,7 @@ Date : 24.10.26
 + 기술만 바라보는게 아니라 문제에 맞는 모델을 이용해서 좋은 서비스를 만드는게 중요
 + ```문제정의```가 핵심이다
 
----
-
-### Lecture 1.1
+## Lecture 1.1
 + 두개의 이미지를 입력받아 두 이미지가 같은지 판단하는 함수(프로그램)을 만들어 보세요
     + **해결방안 탐구**
     + 픽셀비교? - 틀릴 가능성이 있음
@@ -50,7 +46,7 @@ Date : 24.10.26
 
 + [paperswithcode](https://paperswithcode.com/)
 
-### Lecture 1.2
+## Lecture 1.2
 + 신경망의 동작 원리 이해
 
 + 간단한 예측자
